storefront and api changes
