# api/src/routes/currencies-route.ts
@@ -1,10 +1,0 @@
-import { Router } from 'express'
-
-import { getCurrencies, getCurrency } from '../controllers/currency-controller'
-
-const router = Router()
-
-router.route('/').get(getCurrencies)
-router.route('/:id').get(getCurrency)
-
-export default router
