# api/swagger.yaml
@@ -401,52 +401,6 @@ paths:
                             schema:
                                 $ref: '#/components/schemas/Error'
 
-    /api/store/currencies:
-        get:
-            summary: Gets all currencies
-            tags:
-                - Store/Currencies
-            responses:
-                200:
-                    description: Returns all currencies
-                    content:
-                        application/json:
-                            schema:
-                                type: object
-                                properties:
-                                    data:
-                                        type: array
-                                        items:
-                                            $ref: '#/components/schemas/Currency'
-
-    /api/store/currencies/{id}:
-        get:
-            summary: Gets a currency by ID
-            tags:
-                - Store/Currencies
-            parameters:
-                - in: path
-                  name: id
-                  required: true
-                  schema:
-                      type: string
-            responses:
-                200:
-                    description: Returns the currency
-                    content:
-                        application/json:
-                            schema:
-                                type: object
-                                properties:
-                                    data:
-                                        $ref: '#/components/schemas/Currency'
-                404:
-                    description: Currency not found
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Error'
-
     /api/store/discounts/{id}:
         get:
             summary: Gets a discount by ID
@@ -603,6 +557,24 @@ paths:
             responses:
                 200:
                     description: Returns all products
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    data:
+                                        type: array
+                                        items:
+                                            $ref: '#/components/schemas/Product'
+
+    /api/store/products/search:
+        get:
+            summary: Gets searched products
+            tags:
+                - Store/Products
+            responses:
+                200:
+                    description: Returns searched products
                     content:
                         application/json:
                             schema:
@@ -3343,80 +3315,6 @@ paths:
                             schema:
                                 $ref: '#/components/schemas/Error'
 
-    /api/admin/currencies:
-        get:
-            summary: Gets all currencies
-            tags:
-                - Admin/Currencies
-            security:
-                - bearerAuth: []
-            responses:
-                200:
-                    description: Returns all currencies
-                    content:
-                        application/json:
-                            schema:
-                                type: object
-                                properties:
-                                    data:
-                                        type: array
-                                        items:
-                                            $ref: '#/components/schemas/Currency'
-                401:
-                    description: Unauthorized
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Error'
-                403:
-                    description: Forbidden
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Error'
-
-    /api/admin/currencies/{id}:
-        get:
-            summary: Gets a currency by ID
-            tags:
-                - Admin/Currencies
-            security:
-                - bearerAuth: []
-            parameters:
-                - in: path
-                  name: id
-                  required: true
-                  schema:
-                      type: string
-            responses:
-                200:
-                    description: Returns the currency
-                    content:
-                        application/json:
-                            schema:
-                                type: object
-                                properties:
-                                    data:
-                                        $ref: '#/components/schemas/Currency'
-                401:
-                    description: Unauthorized
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Error'
-                403:
-                    description: Forbidden
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Error'
-                404:
-                    description: Currency not found
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Error'
-
     /api/admin/shippingMethods:
         get:
             summary: Gets all shipping methods
@@ -4357,12 +4255,14 @@ components:
                     type: string
                 name:
                     type: string
-                currency:
-                    type: string
                 countries:
                     type: array
                     items:
                         type: string
+                currency:
+                    type: string
+                defaultLocale:
+                    type: string
                 taxRate:
                     type: number
                 metadata:
@@ -4521,6 +4421,8 @@ components:
                     type: string
                 description:
                     type: string
+                region:
+                    type: string
                 handle:
                     type: string
                 keywords:
@@ -4548,6 +4450,8 @@ components:
                 name:
                     type: string
                 description:
+                    type: string
+                region:
                     type: string
                 handle:
                     type: string
@@ -4673,28 +4577,14 @@ components:
                     type: string
                 name:
                     type: string
-                iso_2:
-                    type: string
-                region:
-                    type: string
-                createdAt:
-                    type: string
-                    format: date-time
-                updatedAt:
-                    type: string
-                    format: date-time
-
-        Currency:
-            type: object
-            properties:
-                _id:
-                    type: string
-                name:
-                    type: string
                 code:
                     type: string
-                symbol:
+                currency:
                     type: string
+                languages:
+                    type: array
+                    items:
+                        type: string
                 createdAt:
                     type: string
                     format: date-time
